[gd_scene load_steps=9 format=3 uid="uid://cbskus0incwee"]

[ext_resource type="Script" path="res://price_tag.gd" id="1_0q2ao"]
[ext_resource type="Texture2D" uid="uid://8horya4otgo6" path="res://Objects/Cardboard boxes/Cardboard_RedStickerDiffuse.png" id="1_kgtre"]
[ext_resource type="PackedScene" uid="uid://bk4c1fm5bss75" path="res://UI/price_tag_edit.tscn" id="3_vgw03"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plmhe"]
resource_name = "RedSticker"
cull_mode = 2
albedo_texture = ExtResource("1_kgtre")
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_glqhk"]
_surfaces = [{
"aabb": AABB(-0.119423, -0.0786109, -0.0464494, 0.240053, 0.153397, 0.0106338),
"format": 34896613377,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 1, 0, 9, 0, 8, 0, 1, 0, 2, 0, 9, 0, 2, 0, 10, 0, 9, 0, 3, 0, 10, 0, 2, 0, 11, 0, 3, 0, 0, 0, 11, 0, 10, 0, 3, 0, 11, 0, 1, 0, 8, 0, 11, 0, 0, 0, 1, 0, 5, 0, 13, 0, 12, 0, 5, 0, 6, 0, 13, 0, 6, 0, 9, 0, 13, 0, 7, 0, 9, 0, 6, 0, 8, 0, 7, 0, 4, 0, 8, 0, 9, 0, 7, 0, 8, 0, 5, 0, 12, 0, 8, 0, 4, 0, 5, 0),
"lods": [2.94988e-06, PackedByteArray(1, 0, 9, 0, 8, 0, 11, 0, 1, 0, 8, 0, 1, 0, 11, 0, 9, 0, 11, 0, 10, 0, 9, 0, 8, 0, 9, 0, 7, 0, 7, 0, 9, 0, 13, 0, 8, 0, 7, 0, 12, 0, 12, 0, 7, 0, 13, 0), 3.21453e-06, PackedByteArray(8, 0, 11, 0, 9, 0, 11, 0, 10, 0, 9, 0, 8, 0, 9, 0, 12, 0, 12, 0, 9, 0, 13, 0)],
"name": "RedSticker",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray(65, 14, 66, 239, 185, 15, 0, 0, 58, 14, 153, 173, 191, 59, 0, 0, 206, 241, 215, 173, 237, 134, 0, 0, 214, 241, 128, 239, 230, 90, 0, 0, 55, 14, 34, 144, 130, 79, 0, 0, 41, 14, 100, 21, 206, 161, 0, 0, 189, 241, 162, 21, 252, 236, 0, 0, 203, 241, 96, 144, 174, 154, 0, 0, 17, 0, 77, 161, 79, 63, 0, 0, 244, 255, 147, 161, 214, 147, 0, 0, 255, 255, 255, 255, 134, 84, 0, 0, 28, 0, 185, 255, 0, 0, 0, 0, 0, 0, 0, 0, 120, 171, 0, 0, 226, 255, 69, 0, 255, 255, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_460i4"]
resource_name = "Cardboard_011_Plane_005"
_surfaces = [{
"aabb": AABB(-0.119423, -0.0786109, -0.0464494, 0.240053, 0.153397, 0.0106338),
"attribute_data": PackedByteArray(70, 8, 231, 244, 31, 41, 231, 244, 31, 41, 20, 67, 70, 8, 20, 67, 221, 55, 231, 244, 69, 117, 231, 244, 69, 117, 20, 67, 221, 55, 20, 67, 31, 41, 231, 244, 68, 47, 246, 255, 68, 47, 5, 56, 31, 41, 20, 67, 31, 41, 20, 67, 68, 47, 5, 56, 8, 0, 5, 56, 70, 8, 20, 67, 8, 0, 246, 255, 70, 8, 231, 244, 70, 8, 20, 67, 8, 0, 5, 56, 8, 0, 246, 255, 68, 47, 246, 255, 31, 41, 231, 244, 70, 8, 231, 244, 69, 117, 231, 244, 247, 127, 246, 255, 247, 127, 5, 56, 69, 117, 20, 67, 69, 117, 20, 67, 247, 127, 5, 56, 68, 47, 5, 56, 221, 55, 20, 67, 68, 47, 246, 255, 221, 55, 231, 244, 221, 55, 20, 67, 68, 47, 5, 56, 68, 47, 246, 255, 247, 127, 246, 255, 69, 117, 231, 244, 221, 55, 231, 244),
"format": 34896613399,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 14, 0, 12, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 31, 0, 30, 0, 28, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0),
"lods": [2.94988e-06, PackedByteArray(1, 0, 10, 0, 9, 0, 16, 0, 1, 0, 9, 0, 1, 0, 16, 0, 10, 0, 16, 0, 14, 0, 10, 0, 9, 0, 10, 0, 7, 0, 7, 0, 10, 0, 26, 0, 9, 0, 7, 0, 25, 0, 25, 0, 7, 0, 26, 0), 3.21453e-06, PackedByteArray(9, 0, 16, 0, 10, 0, 16, 0, 14, 0, 10, 0, 9, 0, 10, 0, 25, 0, 25, 0, 10, 0, 26, 0)],
"material": SubResource("StandardMaterial3D_plmhe"),
"name": "RedSticker",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray(65, 14, 66, 239, 185, 15, 9, 192, 58, 14, 153, 173, 191, 59, 9, 192, 206, 241, 215, 173, 237, 134, 8, 192, 214, 241, 128, 239, 230, 90, 8, 192, 55, 14, 34, 144, 130, 79, 8, 192, 41, 14, 100, 21, 206, 161, 8, 192, 189, 241, 162, 21, 252, 236, 8, 192, 203, 241, 96, 144, 174, 154, 8, 192, 58, 14, 153, 173, 191, 59, 8, 192, 17, 0, 77, 161, 79, 63, 8, 192, 244, 255, 147, 161, 214, 147, 9, 192, 206, 241, 215, 173, 237, 134, 9, 192, 206, 241, 215, 173, 237, 134, 8, 192, 244, 255, 147, 161, 214, 147, 8, 192, 255, 255, 255, 255, 134, 84, 8, 192, 214, 241, 128, 239, 230, 90, 8, 192, 28, 0, 185, 255, 0, 0, 9, 192, 65, 14, 66, 239, 185, 15, 9, 192, 214, 241, 128, 239, 230, 90, 8, 192, 255, 255, 255, 255, 134, 84, 8, 192, 28, 0, 185, 255, 0, 0, 9, 192, 17, 0, 77, 161, 79, 63, 8, 192, 58, 14, 153, 173, 191, 59, 8, 192, 65, 14, 66, 239, 185, 15, 9, 192, 41, 14, 100, 21, 206, 161, 9, 192, 0, 0, 0, 0, 120, 171, 9, 192, 226, 255, 69, 0, 255, 255, 9, 192, 189, 241, 162, 21, 252, 236, 9, 192, 189, 241, 162, 21, 252, 236, 8, 192, 226, 255, 69, 0, 255, 255, 8, 192, 244, 255, 147, 161, 214, 147, 8, 192, 203, 241, 96, 144, 174, 154, 8, 192, 17, 0, 77, 161, 79, 63, 9, 192, 55, 14, 34, 144, 130, 79, 9, 192, 203, 241, 96, 144, 174, 154, 8, 192, 244, 255, 147, 161, 214, 147, 8, 192, 17, 0, 77, 161, 79, 63, 8, 192, 0, 0, 0, 0, 120, 171, 8, 192, 41, 14, 100, 21, 206, 161, 8, 192, 55, 14, 34, 144, 130, 79, 8, 192, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131, 241, 129, 188, 131)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_glqhk")

[sub_resource type="BoxShape3D" id="BoxShape3D_nvspn"]
size = Vector3(0.244843, 0.158112, 0.017334)

[sub_resource type="BoxShape3D" id="BoxShape3D_gg8ic"]
size = Vector3(1.17395, 0.493164, 0.904419)

[node name="PriceTag" type="StaticBody3D" groups=["interactable", "price_tag"]]
process_mode = 3
collision_layer = 8
collision_mask = 16
script = ExtResource("1_0q2ao")

[node name="PriceTagMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_460i4")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="PriceTagMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0288282, -0.03752)
texture_filter = 0
text = "Â£0"
font_size = 10
outline_size = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.62939e-05, -0.0014801, -0.0377197)
shape = SubResource("BoxShape3D_nvspn")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0869751, 0.253418, -0.546178)
visible = false
shape = SubResource("BoxShape3D_gg8ic")

[node name="PriceTagEdit" parent="." instance=ExtResource("3_vgw03")]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
